Bug 173293 - Editing formula twice causes wrong circle error
Summary: Editing formula twice causes wrong circle error
Status: RESOLVED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR grave
Target Milestone: ---
Assignee: Calligra Sheets (KSpread) Bugs
URL:
Keywords:
: 173496 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-10-22 12:51 UTC by Sven Langkamp
Modified: 2008-10-26 17:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Langkamp 2008-10-22 12:51:34 UTC
Version:           2.0 beta-2 (using 4.1.1 (KDE 4.1.0 (4.1 >= 20080722)) "release 40.1", KDE:KDE4:Factory:Desktop / openSUSE_11.0)
Compiler:          gcc
OS:                Linux (i686) release 2.6.25.16-0.1-pae

To reproduce:
-insert e.g. -5 into Cell A1
-insert formula =ABS(A1) into A2
-select A2 again, but don't change anything
-deselect A2

Result:
A1 and A2 show the correct values after the first editing, but #CIRCLE! after the second
Comment 1 Sven Langkamp 2008-10-25 10:11:48 UTC
*** Bug 173496 has been marked as a duplicate of this bug. ***
Comment 2 Tomas Mecir 2008-10-26 17:59:53 UTC
SVN commit 876167 by mecir:

Improving and sanitizing the reference selection code. This fixes
problems where formula references got incorrectly remembered as a
selection upon editing a cell, changing a wrong cell and causing many
problems.

Furthermore, enabled signal calling when doing reference selection list
updates (no idea why Stefan decided to disable them). This means that
the colored boxes around referenced cells within a formula are actually
displayed again.

Also unified the two editing widgets - each of them was using a
different code to update cells and such, which led to a mess. Now one of
the widgets simply relays all keyboard events to the other, who updates
the text in both. This greatly improves KSpread's behaviour when editing
cells.

Some issues still remain - most notably, selecting the text in the
toolbox editor will work oddly. I will fix this soon.

So few lines of code, so many improvements. Yes, I'm good ;)

BUG: 173293



 M  +5 -0      Selection.cpp  
 M  +26 -37    ui/Editors.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=876167