Improving and sanitizing the reference selection code. This fixes problems where formula references got incorrectly remembered as a selection upon editing a cell, changing a wrong cell and causing many problems.

Furthermore, enabled signal calling when doing reference selection list
updates (no idea why Stefan decided to disable them). This means that
the colored boxes around referenced cells within a formula are actually
displayed again.

Also unified the two editing widgets - each of them was using a
different code to update cells and such, which led to a mess. Now one of
the widgets simply relays all keyboard events to the other, who updates
the text in both. This greatly improves KSpread's behaviour when editing
cells.

Some issues still remain - most notably, selecting the text in the
toolbox editor will work oddly. I will fix this soon.

So few lines of code, so many improvements. Yes, I'm good ;)

BUG: 173293


svn path=/trunk/koffice/; revision=876167